# Bachelor-Thesis

./: convert_oop.py  convert_tsv.py
include/: QAC.cpp  QAC.h  adj_list.cpp  adj_list.h
include/LouvainAlgorithm/src/: Graph.cpp  Graph.h  Louvain.cpp  Louvain.h
include/adj_list/: CMakeLists.txt  adj_list.cpp  adj_list.h
